force-app/main/default/objects/Service_Detail__c/fields/Monthly_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Estimates__c</fullName>
    <label>Monthly Estimates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>