force-app/main/default/objects/Service_Detail__c/fields/Valuation_Form__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Form__c</fullName>
    <label>Valuation Form</label>
    <referenceTo>Valuation_Form__c</referenceTo>
    <relationshipLabel>Service Details</relationshipLabel>
    <relationshipName>Service_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>